# historia

./: .gitignore  Cargo.toml  LICENSE
historia/: package-lock.json  package.json
notes/: general.md  handling-import-failures.md  window-structure.md  writing-fs-changes.md
src/: readme.md
src/js/: readme.md
src/js/historia/: README.md  package.json
src/objc/: readme.md
src/rust/: .gitignore  readme.md
src/rust/jtitor-historia-backend/: Cargo.toml
src/rust/jtitor-historia-backend/src/: lib.rs
src/rust/jtitor-historia-backend/src/error/: conversion_error.rs  mod.rs
src/rust/jtitor-historia-backend/src/io/: export.rs  fs_change.rs  helpers.rs  import.rs  mod.rs  workspace_exporter.rs  workspace_importer.rs
src/rust/jtitor-historia-backend/src/model/: describe_fs_path.rs  mod.rs  note.rs  notebook.rs  section.rs  workspace.rs  workspace_node.rs
src/rust/jtitor-historia-backend/src/model/note/: file.rs  mod.rs  note.rs
src/rust/jtitor-historia-backend/src/model/notebook/: file.rs  metadata.rs  mod.rs  notebook.rs
src/rust/jtitor-historia-backend/src/model/workspace/: file.rs  metadata.rs  mod.rs  workspace.rs
src/swift/: readme.md
src/swift/historia/historia/: AppDelegate.swift  Info.plist  ViewController.swift
src/swift/historia/historia.xcodeproj/: project.pbxproj
src/swift/historia/historia.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/swift/historia/historia/Base.lproj/: Main.storyboard
src/swift/historia/historiaTests/: historiaTests.swift
src/swift/historia/historiaUITests/: historiaUITests.swift
