[package]
name = "jtitor-historia-backend"
version = "0.1.0"
authors = ["jTitor <me@me.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
# Default version is 1.0.
serde = { version = "*", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
# Default version is 1.0.
serde_json = "*"
